<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignInActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|start"
            android:layout_marginBottom="20dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_logo"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/font"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_description"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    android:fontFamily="@font/font" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/font"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_description"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            android:fontFamily="@font/font"
            android:layout_marginBottom="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_rectangle_gray_with_rounded">

            <EditText
                android:id="@+id/sign_in_email"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="@color/black_transparent"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/font"
                android:background="@android:color/transparent"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_mail"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_rectangle_gray_with_rounded">

            <EditText
                android:id="@+id/sign_in_password"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/black_transparent"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/font"
                android:background="@android:color/transparent"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_lock"/>
        </LinearLayout>

        <TextView
            android:id="@+id/sign_in_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/forget_password"
            android:textColor="@color/secondary"
            android:textSize="12sp"
            android:fontFamily="@font/font"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:textSize="14sp"
            android:fontFamily="@font/font"
            android:layout_marginBottom="70dp"
            android:background="@drawable/shape_rectangle_amber_with_rounded"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_register_a_new_user"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="@font/font"/>

            <TextView
                android:id="@+id/sign_in_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/secondary"
                android:textSize="12sp"
                android:fontFamily="@font/font"/>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>