<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SplashActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/item_on_boarding_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_boarding_title_one"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/font"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/item_on_boarding_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_description"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            android:fontFamily="@font/font"
            android:layout_marginBottom="60dp"/>

        <ImageView
            android:id="@+id/item_on_boarding_img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>