<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/setting_sign_out">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:background="@drawable/shape_rectangle_gray_with_rounded"
                android:text="@string/account_setting"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/shape_rectangle_amber_with_rounded"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/name"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name Name Name"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="15dp"/>

                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_edit"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_rectangle_gray_with_rounded"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/shape_rectangle_amber_with_rounded"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/email"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="xxxxxxx@gmail.comm"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="15dp"/>

                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_edit"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:background="@drawable/shape_rectangle_gray_with_rounded"
                android:text="@string/application_setting"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/shape_rectangle_amber_with_rounded"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/language"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="english"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="15dp"/>

                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_edit"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/setting_sign_out"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/sign_out"
        android:textSize="14sp"
        android:fontFamily="@font/font"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_rectangle_red_with_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>