<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_rectangle_gray_with_rounded_15">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_people"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="200 beneficiaries"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/font"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_rectangle_gray_with_rounded_15">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_contact"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/font"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send A Message"
            android:textColor="@color/secondary"
            android:textSize="12sp"
            android:fontFamily="@font/font"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/ic_next"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center"
        android:background="@drawable/shape_rectangle_gray_with_rounded_15">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_policies"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/policies_and_rules"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/font"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:textColor="@color/secondary"
            android:textSize="12sp"
            android:fontFamily="@font/font"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/ic_next"/>
    </LinearLayout>
</LinearLayout>