<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_user_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/im_profile"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                android:fontFamily="@font/font" />

            <TextView
                android:id="@+id/main_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_name_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/font"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/main_setting"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_rectangle_gray_with_rounded"
            android:src="@drawable/ic_setting"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/main_header">

        <EditText
            android:id="@+id/main_text_search"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:hint="@string/search_here"
            android:textColorHint="@color/black_transparent"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/font"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_rectangle_gray_with_rounded"/>

        <ImageButton
            android:id="@+id/main_search"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_rectangle_gray_with_rounded"
            android:src="@drawable/ic_search"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/main_search_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/main_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_gray_with_rounded_top"
        app:menu="@menu/main_menu"
        app:itemIconSize="20dp"
        app:itemIconTint="@color/selector_color_black_to_amber"
        app:itemTextColor="@color/selector_color_black_to_amber"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>